# faberge

./: .gitmodules  .travis.yml  README.md  pyproject.toml  setup.py
faberge/: ScoreTemplate.py  __init__.py  __metadata__  __metadata__.py  library.py  stylesheet.ily  tools.py
faberge/builds/: front-cover.indd  parts-english-horn.tex  parts-music-cello.ly  parts-percussion.tex  parts-piano.tex  segment-a.ly  segment-e.ly  segment-f.ly
faberge/etc/: 14-relata.txt  games.md  kernel.md  materials-1.txt  materials.md  materials.txt  mechanism.md  processes.md  relata.md  sections-ab.txt  sections.txt  segments-a.md  segments-ab.md  segments-bk.md  segments.md  stages-a.md  stages-bk.md  stages.txt  to-do.md
faberge/materials/: __abbreviations__.py  __init__.py  __views__.py
faberge/sections/: stylesheet.ily
faberge/segments/: __metadata__.py  __views__.py
faberge/stylesheets/: context-definitions.ily  contexts.ily  default-instrument-names.ily  markups.ily  nonfirst-segment.ily  parts.ily  stylesheet.ily
faberge/test/: test_materials.py
faberge/tools/: MarkupLibrary.py  ScoreTemplate.py  __init__.py  agitated_wind_rhythm.py  airtone_chain_rhythm.py  airtone_pedal_rhythm.py  back_incised_divisions.py  bcl_color_fingering_rhythm.py  bcl_color_fingerings.py  bfl_color_fingerings.py  cello_gears_rhythm.py  chord_pitches.py  clarinet_gears_rhythm.py  clb_pitches.py  clb_rhythm.py  clb_staff_positions.py  color_fingerings.py  dal_niente_hairpins.py  downbeat_attack.py  eh_trill_rhythm.py  electricity_rhythm.py  end_of_cell_attack.py  even_tuplet_rhythm.py  (+85 more)
(+1100 files in other folders)
