[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faberge"
version = "3.30"
description = "Fabergé Investigations (2016/19) for eight players"
authors = [{ name = "Trevor Bača", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.30"]

[project.urls]
Homepage = "https://github.com/trevorbaca/faberge"

[tool.setuptools]
packages = ["faberge"]
package-dir = { "" = "source" }
